# LocalReader

./: .env.default  .gitattributes  .gitignore  .gitmodules  DEPLOYMENT.md  Dockerfile  README.md  app.py  compose.yml  index.html  manifest.webmanifest  offline.html  render.js  server.py  service-worker.js  sw-registration.js  sw.js
.github/workflows/: static.yml
research/: Yolov10m.html
research/p2p/: index.html
research/previous/: index.html
scripts/: version-bump.py
src/: app.js  config.js
src/constants/: events.js
src/core/: cacheManager.js  eventBus.js  stateManager.js
src/css/: epub.css  input.css  output.css  style.css
src/modules/: index.js
src/modules/epub/: epubLoader.js  epubRenderer.js
src/modules/login/: auth.js
src/modules/pdf/: pdfHeaderFooterDetector.js  pdfLoader.js  pdfRenderer.js  sentenceParser.js  textExtractor.js  ts.js
src/modules/storage/: exportManager.js  highlightsStorage.js  pdfThumbnailCache.js  progressManager.js  serverSync.js
src/modules/tts/: CMakeLists.txt  README.md  audioManager.js  index.html  piper-client.js  piper-tts.cpp  piper.worker.js  synthesisQueue.js  ttsEngine.js  wordHighlighter.js  worker.js
src/modules/ui/: controlsManager.js  highlightManager.js  interactionHandler.js  uiService.js  viewManager.js
src/modules/utils/: ariaManager.js  coordinates.js  helpers.js  responsive.js  viewport.js
